# jira-automations

./: .gitignore
backend_automations/: .flake8  .gitignore  ci_script.sh  manage.py  mypy.ini  pyproject.toml  pytest.ini
backend_automations/accounts/management/commands/: create_user.py
backend_automations/accounts/templates/registration/: logged_out.html  login.html
backend_automations/accounts/tests/: test_create_user.py
backend_automations/accounts/tests/factories/: user_factory.py
backend_automations/backend_automations/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
backend_automations/deployment/: DEPLOYMENT.md  generate_secret_key.sh
backend_automations/deployment/assets/common/: .env.example.sh
backend_automations/deployment/assets/server/: .env.example  deploy_new_changes.sh  gunicorn.service.base  ssh_config
backend_automations/deployment/first_deployment/: check_connection_with_regular_user.sh  full_deployment.sh  init_env_variables.sh
backend_automations/deployment/first_deployment/server/: create_app_user.sh  create_regular_user.sh  install_django_app.sh  install_lets_encrypt.sh  setup_cronjobs.sh  setup_git_changes_pulling.sh
backend_automations/deployment/maintenance/: run_maintenance.sh  ssh_to_server.sh
backend_automations/deployment/maintenance/server/: add_cronjobs.sh  (+6 more)
backend_automations/jira/: forms.py  jira_client.py  models.py  urls.py  views.py  webhooks_client.py
backend_automations/jira/migrations/: 0001_initial.py
backend_automations/jira/tests/: get_all_jira_issues_mock.py  test_jira_client.py  test_views.py
(+5 files in other folders)
